# cheesecake

./: CMakeLists.txt  README.md  info.plist  notes.txt
assets/conveyers/sprite-all/: combiner.aseprite  conveyer belt all-0001.aseprite  conveyer belt tunnel all-0004.aseprite  curves.aseprite  splitter.aseprite  splitters-combiners.aseprite
assets/map/: isometric-sandbox-map.tmj
assets/sprites/: sprite_definitions.json
src/: common.h  font.shader.glsl  font.shader.glsl.h  font_rendering.c  font_rendering.h  main.c  renderer.c  renderer.h  shader.glsl  shader.glsl.h  sokol.c  window.c  window.h
src/backends/: d3d11_backend.c  metal_backend.c  opengl_backend.c
src/components/: animation.c  animation.h  animation_graph.c  animation_graph.h  conveyor.c  conveyor.h  input.c  input.h  rendering.c  rendering.h  sprite.c  sprite.h  transform.c  transform.h
src/entities/: entity_factory.c  entity_factory.h
src/systems/: animation_system.c  animation_system.h  conveyor_system.c  conveyor_system.h  input_system.c  input_system.h  render_system.c  render_system.h  rendering_system.c  rendering_system.h
src/util/: grid_helper.c  grid_helper.h  map_loader.c  map_loader.h  sprite_loader.c  sprite_loader.h
